<resources>
    <string name="app_name">E-wallet-FPTU</string>
    <string name="_200_000">200.000</string>
    <string name="_100_000">100.000</string>
    <string name="_300_000">300.000</string>
    <string name="_500_000">500.000</string>
    <string name="_20_000">20.000</string>
    <string name="_50_000">50.000</string>
    <string name="t_m_ki_m">Tìm kiếm</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>